--- a/templates/trends.html
+++ b/templates/trends.html
@@ -121,6 +121,8 @@
             }
         }
     </style>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5708038591832731"
+        crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100">
     <header class="bg-green-600 text-white shadow-lg sticky top-0 z-50">
