--- a/templates/reports.html
+++ b/templates/reports.html
@@ -43,6 +43,16 @@
   </style>
        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5708038591832731"
         crossorigin="anonymous"></script>
+
+          <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGT3YHYT01"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-YGT3YHYT01');
+        </script>
 </head>
 <body class="bg-gray-100">
   <header class="bg-green-600 text-white shadow-lg sticky top-0 z-50">
